# hdl-verifgui

./: .gitignore  BUILDING.md  CONTRIBUTING.md  README.md
pyParser/: README.md  setup.py
pyParser/example/: rtl
pyParser/sv_hierarchy/: hierarchy.py  includes.py  interfaces.py  parser.py  ports.py
pyVerifGUI/: Doxyfile  README.md  requirements.txt  setup.py  userguide.md
pyVerifGUI/examples/alu/rtl/: adder.sv  alu.sv  dummy_test.sv
pyVerifGUI/pyVerifGUI/: __init__.py  __main__.py  plugin_utils.py  pytest_integration.py
pyVerifGUI/pyVerifGUI/assets/help/: concepts.md  hierarchy.md  linter.md  main.md  orphans.md  tasks.md  userguide.md
pyVerifGUI/pyVerifGUI/configs/: example.yaml
pyVerifGUI/pyVerifGUI/gui/: __init__.py  application.py  base_tab.py  config.py  config_editor.py  menus.py
pyVerifGUI/pyVerifGUI/gui/editor/: __init__.py  editor.py  highlighting.py
pyVerifGUI/pyVerifGUI/gui/models/: __init__.py  coverage.py  design.py  lint.py  message.py
pyVerifGUI/pyVerifGUI/gui/tabs/: __init__.py  (+9 more)
pyVerifGUI/pyVerifGUI/parsers/: __init__.py  lint_messages.py
pyVerifGUI/pyVerifGUI/tasks/: __init__.py  base.py  cocotb.py  cocotb_collect.py  cocotb_run.py  example_task.py  lint.py  parse.py  parse_coverage.py  report.py  runners.py  worker.py
rSVParser/: .gitignore  Cargo.toml  README.md  requirements.txt
rSVParser/src/: hierarchy.rs  includes.rs  interfaces.rs  main.rs  modules.rs  out.rs  packages.rs  ports.rs  tests.rs
rSVParser/sv_hierarchy/: helpers.py  hierarchy.py  includes.py  interfaces.py  modules.py  packages.py  parser.py  ports.py
(+6 files in other folders)
